# ai-runtime-security-control-plane

./: .env.example  .gitignore  Dockerfile  README.md  RESULTS.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docs/: ARCHITECTURE_CONTRACT.md  DATA_MODEL.md  DECISION_LOG.md  DEMO_STORYBOARD.md  DEMO_VIDEO_WORKFLOW.md  EXPLAINABILITY_SPEC.md  INTEGRATION_AND_OFFBOARDING.md  OBSERVABILITY.md  PHASE_PLAN.md  PLAYBOOKS.md  SECURITY_MODEL.md  STATUS.md  SYSTEM_MAP.md  TAINT_SPEC.md  THREAT_MODEL.md  TROUBLESHOOTING.md
examples/: sdk_integration.py  simple_chatbot.py
helm/airs-cp/: Chart.yaml  values.yaml
helm/airs-cp/templates/: _helpers.tpl  deployment.yaml  service.yaml
models/: anomaly_detector.pkl  injection_classifier.pkl
recordings/: cli.cast
samples/: 01_chatbot_proxy.py  02_rag_sdk.py  03_agent_tools.py  04_attack_simulation.py  05_multi_provider.py  06_enterprise_agent.py  README.md  pov_demo.py  pov_realworld.py
scripts/: demo.py  pov_demo.py
src/airs_cp/: __init__.py  cli.py
src/airs_cp/adapters/: __init__.py  anthropic_adapter.py  azure_adapter.py  base.py  ollama_adapter.py  openai_adapter.py  registry.py
src/airs_cp/config/: __init__.py  settings.py
src/airs_cp/dashboard/: __init__.py  app.py
src/airs_cp/explainability/: __init__.py  narrative.py  shap_explainer.py
src/airs_cp/gateway/: __init__.py  app.py  app.py:Zone.Identifier
src/airs_cp/ml/: __init__.py  anomaly.py  classifier.py  features.py  training.py
src/airs_cp/observability/: __init__.py  analyzer.py  registry.py  tracker.py
src/airs_cp/orchestrator/: __init__.py  executor.py  playbooks.py
src/airs_cp/sdk/: __init__.py  client.py
tests/: conftest.py  test_adapters.py  test_explainability.py  test_gateway.py  test_ml.py  test_observability.py  test_phase2.py  test_security.py
(+9 files in other folders)
